gatsby가 mdx와의 조합으로 사용했을때  자동으로 처리해주는 여러 기능들을 알아보았다. Head에까지 data를 넣어주며, 메인 컴포넌트의 children부분은 HTML코드로 변환되어 들어가는 멋있는 기능을 사용해볼 수 있었다.

--- a/blog-posts/Bye.mdx
+++ b/blog-posts/Bye.mdx
@@ -3,7 +3,7 @@ title: Bye Bye everyone
 category: personal
 date: "2023-04-06"
 author: psw
-slug: bye-bye-everyone
+slug: bye-everyone
 ---
 
 # Bye everyone!
